# manoka

./: Cargo.toml  README.md  flake.nix  justfile
.cargo/: config.toml
crates/manoka/: Cargo.toml
crates/manoka/assets/shaders/: direct_pass.wgsl  raytrace.wgsl
crates/manoka/src/: main.rs
crates/manoka/src/chunk/: inspector.rs  mod.rs
crates/manoka/src/render/: direct_pass.rs  mod.rs  unified_occupancy.rs
crates/manoka/src/sun/: mod.rs  render.rs
src/: main.rs
