
[workspace]
resolver = "2"
members = ["crates/*"]

# bevy iterative compile perf
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "animation",
  "bevy_asset",
  # "bevy_audio",
  # "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  # "bevy_gltf",
  "bevy_render",
  # "bevy_sprite",
  # "bevy_text",
  # "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  "vorbis",
  "x11",
  # "bevy_gizmos",
  # "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
  # "bevy_debug_stepping",
] }
zerocopy = { version = "0.7", features = [ "derive" ] }
wgpu = { version = "0.19" }
